Bug 168994 - kopete chatwindow does not save font style
Summary: kopete chatwindow does not save font style
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.60.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 172052 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-08-12 20:25 UTC by Cyrill Helg
Modified: 2008-10-18 23:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Fixes the reported error and another problem (3.96 KB, patch)
2008-08-26 10:00 UTC, Cyrill Helg
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cyrill Helg 2008-08-12 20:25:07 UTC
Version:           0.60.1 (using 4.1.1 (KDE 4.1.0 (4.1 >= 20080722)), Gentoo)
Compiler:          i686-pc-linux-gnu-gcc
OS:                Linux (i686) release 2.6.26-zen2-IBM-T43

Using an msn account, I open chatwindow, then set a font color or a different fond (or the current bold) with the format toolbar, then close the window, reopen, and the settings are lost.
Comment 1 Cyrill Helg 2008-08-26 10:00:10 UTC
Created attachment 27058 [details]
Fixes the reported error and another problem
Comment 2 Cyrill Helg 2008-09-29 16:33:02 UTC
Could this please go into 4.2? Thanks in advance
Comment 3 Roman Jarosz 2008-10-18 23:24:27 UTC
SVN commit 873129 by rjarosz:

Use font style from Chat Windows->Colors & Fonts config dialog by default.
Add action to reset the font style to the default style.
If font style has been changed by the user save it for current contact.

Based on patch provided by Cyrill Helg, thanks!

BUG: 168994



 M  +4 -7      chattexteditpart.cpp  
 M  +22 -9     chatview.cpp  
 M  +5 -0      chatview.h  
 M  +31 -24    kopetechatwindow.cpp  
 M  +1 -0      kopetechatwindow.h  
 M  +132 -96   krichtexteditpart.cpp  
 M  +9 -5      krichtexteditpart.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=873129
Comment 4 Roman Jarosz 2008-10-18 23:27:23 UTC
*** Bug 172052 has been marked as a duplicate of this bug. ***