Use font style from Chat Windows->Colors & Fonts config dialog by default. Add action to reset the font style to the default style. If font style has been changed by the user save it for current contact.

Based on patch provided by Cyrill Helg, thanks!

BUG: 168994


svn path=/trunk/KDE/kdenetwork/kopete/; revision=873129